force-app/main/default/objects/Item_Snapshot_Field__c/Item_Snapshot_Field__c.object-meta.xml
<CustomObject>
    <label>Item Snapshot Field</label>
    <nameField>
        <label>Item Snapshot Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Snapshot Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>