force-app/main/default/objects/Item_Snapshot_Field__c/fields/Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Places__c</fullName>
    <description>getScale</description>
    <inlineHelpText>getScale</inlineHelpText>
    <label>Decimal Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>