force-app/main/default/objects/Item_Snapshot_Field__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>getDefaultValue if not null or
getDefaultValueFormula if not null</description>
    <inlineHelpText>getDefaultValue if not null or
getDefaultValueFormula if not null</inlineHelpText>
    <label>Default Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>