force-app/main/default/objects/Item_Snapshot_Field__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <description>getLocalName</description>
    <inlineHelpText>getLocalName</inlineHelpText>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>