force-app/main/default/objects/Item_Snapshot_Field__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>getLabel</description>
    <inlineHelpText>getLabel</inlineHelpText>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>