force-app/main/default/objects/Item_Snapshot_Field__c/fields/Filtered__c.field-meta.xml
<CustomField>
    <fullName>Filtered__c</fullName>
    <description>getFilteredLookupInfo.isOptionalFilter</description>
    <inlineHelpText>getFilteredLookupInfo.isOptionalFilter</inlineHelpText>
    <label>Filtered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Filter</fullName>
            </value>
            <value>
                <fullName>Filter Optional</fullName>
            </value>
            <value>
                <fullName>Filter Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>