force-app/main/default/objects/Item_Snapshot_Field__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>getCalculatedFormula</description>
    <inlineHelpText>getCalculatedFormula</inlineHelpText>
    <label>Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>