force-app/main/default/objects/Item_Snapshot_Field__c/fields/Is_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Custom_Field__c</fullName>
    <formula>IF(RIGHT(Field_Api_Name__c , 3) == &apos;__c&apos;,
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Custom Field</label>
    <type>Checkbox</type>
</CustomField>