force-app/main/default/objects/Item_Snapshot_Field__c/fields/Item_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Item_Snapshot__c</fullName>
    <label>Item Snapshot</label>
    <referenceTo>Item_Snapshot__c</referenceTo>
    <relationshipLabel>Item Snapshot Fields</relationshipLabel>
    <relationshipName>Item_Snapshot_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>