force-app/main/default/objects/Item_Snapshot_Field__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>getLength if text or
getPrecision if number</description>
    <inlineHelpText>getLength if text or
getPrecision if number</inlineHelpText>
    <label>Length</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>