force-app/main/default/objects/Item_Snapshot_Field__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>getType</description>
    <inlineHelpText>getType</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>